fixed overlapping problem with tabs

--- a/themes/thunderplains/source/stylesheets/thunderplains.styl
+++ b/themes/thunderplains/source/stylesheets/thunderplains.styl
@@ -383,7 +383,7 @@ header
       margin-bottom: 7px
 
   .nav-tabs
-    margin-top: -28px;
+    margin-top: -8px;
   p
     clear: both
     margin-top: 10px
